--- a/src/app/main/pages/quality/configurations/configurations.component.html
+++ b/src/app/main/pages/quality/configurations/configurations.component.html
@@ -264,7 +264,7 @@
                                             </th>
                                             <td mat-cell *matCellDef="let element" class="table__cell">
                                                 <button mat-icon-button>
-                                                    <mat-icon style="color: #828282" (click)="editWorkShop(elemnt)">edit</mat-icon>
+                                                    <mat-icon style="color: #828282" (click)="editWorkShop(element)">edit</mat-icon>
                                                 </button>
                                                 <button mat-icon-button (click)="deleteWorkshop(element)">
                                                     <mat-icon style="color: #828282">delete</mat-icon>
