--- a/src/app/main/pages/quality/configurations/dialogs/edit-work-shop/edit-work-shop.component.scss
+++ b/src/app/main/pages/quality/configurations/dialogs/edit-work-shop/edit-work-shop.component.scss
@@ -16,3 +16,20 @@
         align-self: center;
     }
 }
+
+.item-list {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 7px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 15px;
+    /* or 200% */
+    letter-spacing: 0.5px;
+    color: #828282;
+}
