--- a/src/app/main/pages/quality/analysis/tracing/dialogs/acc-corrective-dialog/acc-corrective-dialog.component.scss
+++ b/src/app/main/pages/quality/analysis/tracing/dialogs/acc-corrective-dialog/acc-corrective-dialog.component.scss
@@ -1,39 +1,42 @@
-
-.container{
-    display: flex;
+.container {
+    display       : flex;
     flex-direction: column;
-    &__details{
+
+    &__details {
         margin-top: 20px;
     }
-    &__informations{
-       
-    }
-    &__form{
-        display: flex;
+
+    &__informations {}
+
+    &__form {
+        display       : flex;
         flex-direction: row;
 
-        &--kit{
-            margin-top: 15px;
+        &--kit {
+            margin-top  : 15px;
             margin-right: 15px;
         }
-        &--input1{
-            width: 260px;
-            margin-right: 15px; 
+
+        &--input1 {
+            width       : 260px;
+            margin-right: 15px;
         }
-        &--input2{
-            width: 160px;
-            margin-right: 15px; 
+
+        &--input2 {
+            width       : 160px;
+            margin-right: 15px;
         }
-        &--text{
+
+        &--text {
             margin-top: 5px;
-            font-size: 0.8em;
-            color: #0064EA;
+            font-size : 0.8em;
+            color     : #0064EA;
         }
-        &--btnadd{
-            margin: 0px 20px 50px 20px;
+
+        &--btnadd {
+            margin : 0px 20px 50px 20px;
             padding: 0px 20px 0px 20px;
         }
     }
 
 }
-
