:hammer:  Fixed #HU13

--- a/src/app/main/pages/quality/configurations/configurations.component.html
+++ b/src/app/main/pages/quality/configurations/configurations.component.html
@@ -451,7 +451,7 @@
                             </div>
 
                             <div>
-                                <div class="container-table" *ngIf="workshopProcess$ | async">
+                                <div class="table__taller" *ngIf="workshopProcess$ | async">
                                     <table mat-table [dataSource]="workshopDataSource" class="mat-elevation-z8">
                                         <ng-container matColumnDef="No">
                                             <th mat-header-cell *matHeaderCellDef class="table__cell theader">
