--- a/src/app/main/pages/quality/configurations/dialogs/edit-workshop-dialog/edit-workshop-dialog.component.html
+++ b/src/app/main/pages/quality/configurations/dialogs/edit-workshop-dialog/edit-workshop-dialog.component.html
@@ -15,29 +15,36 @@
 
 <mat-dialog-content>
     <form [formGroup]="editFormGroup">
-        <mat-form-field>
-            <mat-label>Taller</mat-label>
-            <input matInput type="text" formControlName="workshopName" />
+        <div class="main--wapper">
+            <div class="main--form">
+                <mat-form-field appearance="outline">
+                    <mat-label>Taller</mat-label>
+                    <input matInput type="text" formControlName="workshopName" />
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Escribir</mat-label>
+                    <input matInput type="text" placeholder="Procesos" formControlName="workshopProcessName" (keyup.enter)="addWorkshopProcess()">
+                    <button mat-button matSuffix mat-icon-button>
+                        <mat-icon (click)="resetWorkshopProcess()">close</mat-icon>
+                    </button>
+                    <mat-hint>Presione ENTER para agregar</mat-hint>
+                </mat-form-field>
+                <div class="item-list" *ngFor="let item of process; let i = index">
+                    <ul>
+                        <li>
+                            <span>{{item}}</span>
+                            <button mat-icon-button aria-label="deletelistResult" class="container-diffusion__btn" (click)="deleteProcess(i)">
+                                <mat-icon style="color: #ff2d2d">delete</mat-icon>
+                            </button>
+                        </li>
+                    </ul>
 
-        </mat-form-field>
-
-        <mat-card-content>
-
-            <div class="item-list" *ngFor="let item of process; let i = index" formControlName="workshopProcessName">
-                <ul>
-                    <li>
-                        <span>{{item}}</span>
-                        <button mat-icon-button aria-label="deletelistResult" class="container-diffusion__btn" (click)="deleteProcess(i)">
-                            <mat-icon style="color: #ff2d2d">delete</mat-icon>
-                          </button>
-                    </li>
-                </ul>
-
+                </div>
             </div>
-        </mat-card-content>
+        </div>
     </form>
 </mat-dialog-content>
 
-<button (click)="saveChanges()" type="submit" mat-raised-button color="primary">
-GUARDAR
+<button (click)="saveChanges()" type="submit" mat-raised-button color="primary" [disabled]=" process.length < 1 || !editFormGroup.valid ">
+    GUARDAR
 </button>
