--- a/src/app/main/pages/quality/analysis/progress/dialogs/detail-internal-dialog/detail-internal-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/detail-internal-dialog/detail-internal-dialog.component.html
@@ -1,111 +1,191 @@
 <div>
-    <div class="ms-dialog-header">
-        <mat-icon class="ms-dialog-header__icon">visibility</mat-icon>
-        <h3 class="ms-dialog-header__title"> Detalle evento interno </h3>
-        <span class="ms-fill"></span>
-        <button mat-icon-button mat-dialog-close>
-            <mat-icon>cancel</mat-icon>
-        </button>
-    </div>
-    <mat-divider></mat-divider>
+  <div class="ms-dialog-header">
+    <mat-icon class="ms-dialog-header__icon">visibility</mat-icon>
+    <h3 class="ms-dialog-header__title">Detalle evento interno</h3>
+    <span class="ms-fill"></span>
+    <button mat-icon-button mat-dialog-close>
+      <mat-icon>cancel</mat-icon>
+    </button>
+  </div>
+  <mat-divider></mat-divider>
 
-    <mat-dialog-content style="margin-top: 20px;">
-        <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
-        <div>
-            <form [formGroup]="detailFormGroup" class="timer-container">
-                <p><span style="font-weight: bold;"> OT actual :</span> {{data.workOrder ? data.workOrder : ''}}</p>
-                <p><span style="font-weight: bold;"> Número de parte :</span> {{data.partNumber ? data.partNumber : ''}}
-                </p>
-                <p><span style="font-weight: bold;"> Taller:</span> {{data.workShop ? data.workShop : '-'}}</p>
-                <p><span style="font-weight: bold;"> Tipo de evento :</span> {{data.eventType? data.eventType : ''}}</p>
-                <p><span style="font-weight: bold;"> Taller responsable :</span> {{data.responsibleWorkshop? data.responsibleWorkshop.workshopName : ''}}</p>
-                <p><span style="font-weight: bold;"> Proceso :</span> {{data.responsibleWorkshopProcess? data.responsibleWorkshopProcess : ''}}</p>
-                <p><span style="font-weight: bold;"> Fecha :</span> {{data.createdAt ? ((data.createdAt['seconds'] * 1000) | date : 'dd/MM/yy - hh:mm:ss'): ''}}
-                </p>
+  <mat-dialog-content style="margin-top: 20px">
+    <mat-progress-bar
+      mode="indeterminate"
+      *ngIf="loading$ | async"
+    ></mat-progress-bar>
+    <div>
+      <form [formGroup]="detailFormGroup" class="timer-container">
+        <p>
+          <span style="font-weight: bold"> OT actual :</span>
+          {{ data.workOrder ? data.workOrder : "---" }}
+        </p>
+        <p>
+          <span style="font-weight: bold"> Número de parte :</span>
+          {{ data.partNumber ? data.partNumber : "---" }}
+        </p>
+        <p>
+          <span style="font-weight: bold"> Tipo de evento :</span>
+          {{ data.eventType ? data.eventType : "---" }}
+        </p>
+        <p>
+          <span style="font-weight: bold"> Taller responsable:</span>
+          {{ data.workShop ? data.workShop : "---" }}
+        </p>
+        <p>
+          <span style="font-weight: bold"> Taller que reporta :</span>
+          {{
+            data.reportingWorkshop ? data.reportingWorkshop.workshopName : "---"
+          }}
+        </p>
+        <p>
+          <span style="font-weight: bold"> Proceso :</span>
+          {{
+            data.reportingWorkshopProcess
+              ? data.reportingWorkshopProcess
+              : "---"
+          }}
+        </p>
+        <p>
+          <span style="font-weight: bold"> Fecha :</span>
+          {{
+            data.createdAt
+              ? (data.createdAt["seconds"] * 1000 | date: "dd/MM/yy - hh:mm:ss")
+              : "---"
+          }}
+        </p>
 
-                <mat-form-field appearance="outline" id="result" class="timer-container__input">
-                    <mat-label>Detalle de evento</mat-label>
-                    <textarea matInput type="text" placeholder="Detalle de evento" formControlName="enventDetail" readonly></textarea>
-                </mat-form-field>
+        <mat-form-field
+          appearance="outline"
+          id="result"
+          class="timer-container__input"
+        >
+          <mat-label>Detalle de evento</mat-label>
+          <textarea
+            matInput
+            type="text"
+            placeholder="Detalle de evento"
+            formControlName="enventDetail"
+            readonly
+          ></textarea>
+        </mat-form-field>
 
-                <div class="details-title">
-                    <h3>Análisis</h3>
-                    <span class="ms-fill details-title__decoration"></span>
-                </div>
-
-                <p class="analysis-result"><span> Calidad:</span> {{data.analysisQuality ? data.analysisQuality : '-'}}
-                </p>
-                <p class="analysis-result"><span> Costo:</span> {{data.analysisCost ? data.analysisCost : '-'}}</p>
-                <p class="analysis-result"><span> Frecuencia:</span> {{data.analysisFrequency ? data.analysisFrequency : '-'}}
-                </p>
-                <p class="analysis-result"><span> Nivel de riesgo:</span> {{data.evaluationAnalysisName ? (data.evaluationAnalysisName + ' (' + data.evaluationAnalisis + ')') : '-'}}</p>
-                <p class="analysis-result"><span> Causante de falla:</span> {{data.analysis ? data.analysis['causeFailure'] : '-'}}</p>
-                <p class="analysis-result"><span> Proceso:</span> {{data.analysis ? data.analysis['process'] : '-'}}</p>
-                <p class="analysis-result"><span> Observación:</span> {{data.analysis ? data.analysis['observation'] : '-'}}
-                </p>
-
-                <ng-container *ngIf="data.correctiveActions">
-                    <div class="details-title">
-                        <h3>Acciones correctivas</h3>
-                        <span class="ms-fill details-title__decoration"></span>
-                    </div>
-                    <div *ngFor="let action of data.correctiveActions; let i = index" class="corrective-actions__list">
-                        <span class="corrective-actions__index" [ngClass]="{'corrective-actions__index--done' : action.kit}">{{i+1}}</span>
-                        <span class="corrective-actions__description">{{action.corrective}}</span>
-                        <span class="ms-fill"></span>
-                        <span class="corrective-actions__area">{{action.name}}</span>
-                    </div>
-                </ng-container>
-
-                <div class="details-title">
-                    <h3>Imágenes generales</h3>
-                    <span class="ms-fill details-title__decoration"></span>
-                </div>
-                <div class="container-image">
-                    <picture *ngFor="let item of imagesGeneral; index as i">
-                        <a [href]="item" target="_blank" style="cursor: zoom-in">
-                            <img [src]="item" alt="" class="container-image__img">
-                        </a>
-                    </picture>
-                </div>
-
-                <div class="details-title">
-                    <h3>Imágenes de detalle</h3>
-                    <span class="ms-fill details-title__decoration"></span>
-                </div>
-                <div class="container-image">
-                    <picture *ngFor="let item of imagesDetail; index as i">
-                        <a [href]="item" target="_blank" style="cursor: zoom-in">
-                            <img [src]="item" alt="" class="container-image__img">
-                        </a>
-                    </picture>
-                </div>
-
-                <div class="details-title">
-                    <h3>Archivos adicionales</h3>
-                    <span class="ms-fill details-title__decoration"></span>
-                </div>
-                <div class="container-file">
-                    <div *ngIf="this.data.fileAdditional; else nofile">
-                        <mat-icon>insert_drive_file</mat-icon>
-                        <div *ngFor="let item of this.data.fileAdditional">
-                            <a [href]="item.url" class="container-file__name">
-                                {{item.name}}
-                            </a>
-                        </div>
-                    </div>
-                    <ng-template #nofile>
-                        <mat-icon>insert_drive_file</mat-icon>
-                        No tiene archivos
-                    </ng-template>
-                </div>
-
-            </form>
+        <div class="details-title">
+          <h3>Análisis</h3>
+          <span class="ms-fill details-title__decoration"></span>
         </div>
 
-    </mat-dialog-content>
+        <p class="analysis-result">
+          <span> Calidad:</span>
+          {{ data.analysisQuality ? data.analysisQuality : "-" }}
+        </p>
+        <p class="analysis-result">
+          <span> Costo:</span> {{ data.analysisCost ? data.analysisCost : "-" }}
+        </p>
+        <p class="analysis-result">
+          <span> Frecuencia:</span>
+          {{ data.analysisFrequency ? data.analysisFrequency : "-" }}
+        </p>
+        <p class="analysis-result">
+          <span> Nivel de riesgo:</span>
+          {{
+            data.evaluationAnalysisName
+              ? data.evaluationAnalysisName +
+                " (" +
+                data.evaluationAnalisis +
+                ")"
+              : "-"
+          }}
+        </p>
+        <p class="analysis-result">
+          <span> Causante de falla:</span>
+          {{ data.analysis ? data.analysis["causeFailure"] : "-" }}
+        </p>
+        <p class="analysis-result">
+          <span> Proceso:</span>
+          {{ data.analysis ? data.analysis["process"] : "-" }}
+        </p>
+        <p class="analysis-result">
+          <span> Observación:</span>
+          {{ data.analysis ? data.analysis["observation"] : "-" }}
+        </p>
 
-    <mat-dialog-actions align="end">
-        <button mat-stroked-button color="warn" mat-dialog-close [disabled]="loading$ | async">CANCELAR</button>
-    </mat-dialog-actions>
+        <ng-container *ngIf="data.correctiveActions">
+          <div class="details-title">
+            <h3>Acciones correctivas</h3>
+            <span class="ms-fill details-title__decoration"></span>
+          </div>
+          <div
+            *ngFor="let action of data.correctiveActions; let i = index"
+            class="corrective-actions__list"
+          >
+            <span
+              class="corrective-actions__index"
+              [ngClass]="{ 'corrective-actions__index--done': action.kit }"
+              >{{ i + 1 }}</span
+            >
+            <span class="corrective-actions__description">{{
+              action.corrective
+            }}</span>
+            <span class="ms-fill"></span>
+            <span class="corrective-actions__area">{{ action.name }}</span>
+          </div>
+        </ng-container>
+
+        <div class="details-title">
+          <h3>Imágenes generales</h3>
+          <span class="ms-fill details-title__decoration"></span>
+        </div>
+        <div class="container-image">
+          <picture *ngFor="let item of imagesGeneral; index as i">
+            <a [href]="item" target="_blank" style="cursor: zoom-in">
+              <img [src]="item" alt="" class="container-image__img" />
+            </a>
+          </picture>
+        </div>
+
+        <div class="details-title">
+          <h3>Imágenes de detalle</h3>
+          <span class="ms-fill details-title__decoration"></span>
+        </div>
+        <div class="container-image">
+          <picture *ngFor="let item of imagesDetail; index as i">
+            <a [href]="item" target="_blank" style="cursor: zoom-in">
+              <img [src]="item" alt="" class="container-image__img" />
+            </a>
+          </picture>
+        </div>
+
+        <div class="details-title">
+          <h3>Archivos adicionales</h3>
+          <span class="ms-fill details-title__decoration"></span>
+        </div>
+        <div class="container-file">
+          <div *ngIf="this.data.fileAdditional; else nofile">
+            <mat-icon>insert_drive_file</mat-icon>
+            <div *ngFor="let item of this.data.fileAdditional">
+              <a [href]="item.url" class="container-file__name">
+                {{ item.name }}
+              </a>
+            </div>
+          </div>
+          <ng-template #nofile>
+            <mat-icon>insert_drive_file</mat-icon>
+            No tiene archivos
+          </ng-template>
+        </div>
+      </form>
+    </div>
+  </mat-dialog-content>
+
+  <mat-dialog-actions align="end">
+    <button
+      mat-stroked-button
+      color="warn"
+      mat-dialog-close
+      [disabled]="loading$ | async"
+    >
+      CANCELAR
+    </button>
+  </mat-dialog-actions>
 </div>
