--- a/src/app/main/pages/quality/analysis/results/dialogs/detail-external-dialog/detail-external-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/results/dialogs/detail-external-dialog/detail-external-dialog.component.html
@@ -18,38 +18,36 @@
       <form [formGroup]="detailFormGroup" class="timer-container">
         <p>
           <span style="font-weight: bold"> OT actual :</span>
-          {{ data.workOrder ? data.workOrder : "" }}
+          {{ data.workOrder ? data.workOrder : "---" }}
         </p>
         <p>
           <span style="font-weight: bold"> Componente :</span>
-          {{ data.component ? data.component : "" }}
+          {{ data.component ? data.component : "---" }}
         </p>
         <p>
           <span style="font-weight: bold"> Número de paqueteo :</span>
-          {{ data.packageNumber ? data.packageNumber : "" }}
+          {{ data.packageNumber ? data.packageNumber : "---" }}
         </p>
         <p>
           <span style="font-weight: bold"> Horómetro de componente :</span>
-          {{ data.componentHourMeter ? data.componentHourMeter : "" }}
+          {{ data.componentHourMeter ? data.componentHourMeter : "---" }}
         </p>
         <p>
           <span style="font-weight: bold"> Número de parte :</span>
-          {{ data.partNumber ? data.partNumber : "" }}
+          {{ data.partNumber ? data.partNumber : "---" }}
         </p>
         <p>
           <span style="font-weight: bold"> Tipo de evento :</span>
-          {{ data.eventType ? data.eventType : "" }}
+          {{ data.eventType ? data.eventType : "---" }}
         </p>
         <p>
           <span style="font-weight: bold"> Operacion minera :</span>
-          {{ data.miningOperation ? data.miningOperation : "" }}
+          {{ data.miningOperation ? data.miningOperation : "---" }}
         </p>
         <p>
-          <span style="font-weight: bold"> Taller responsable :</span>
+          <span style="font-weight: bold"> Taller que reporta :</span>
           {{
-            data.responsibleWorkshop
-              ? data.responsibleWorkshop.workshopName
-              : ""
+            data.reportingWorkshop ? data.reportingWorkshop.workshopName : "---"
           }}
         </p>
         <p>
@@ -57,7 +55,7 @@
           {{
             data.createdAt
               ? (data.createdAt["seconds"] * 1000 | date: "dd/MM/yy - hh:mm:ss")
-              : ""
+              : "---"
           }}
         </p>
 
