:sparkles: Feature done

--- a/src/app/main/pages/quality/internal-events/internal-events.component.html
+++ b/src/app/main/pages/quality/internal-events/internal-events.component.html
@@ -121,7 +121,7 @@
             "
             appearance="outline"
           >
-            <mat-label>Posible taller responsable</mat-label>
+            <mat-label>Taller - Posible responsable</mat-label>
             <input
               autocomplete="off"
               formControlName="workShop"
